--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,22 +3,23 @@
 }
 
 body {
-  font-family: 'Work Sans', sans-serif;
+  font-family: "Work Sans", sans-serif;
   font-weight: 300;
-  background-color: #F0F2F5;
+  background-color: #f0f2f5;
 }
 
 a {
-  color: #9980FA;
+  color: #9980fa;
   text-decoration: none;
 }
 
-a:hover, a:focus {
-  color: #5758BB;
+a:hover,
+a:focus {
+  color: #5758bb;
 }
 
 .banner {
-  background: linear-gradient(135deg, #9980fa 0%,#5758bb 100%);
+  background: linear-gradient(135deg, #9980fa 0%, #5758bb 100%);
   text-align: center;
   padding: 2rem;
 }
@@ -83,8 +84,8 @@ a:hover, a:focus {
   margin-top: 0.3rem;
 }
 
-.pure-g [class*=pure-u] {
-  font-family: 'Work Sans', sans-serif;
+.pure-g [class*="pure-u"] {
+  font-family: "Work Sans", sans-serif;
 }
 
 .pure-menu-item {
@@ -101,14 +102,14 @@ a:hover, a:focus {
 }
 
 .pure-button {
-  background-color: #9980FA;
+  background-color: #9980fa;
   color: white;
   text-transform: uppercase;
   letter-spacing: 0.03em;
 }
 
 .pure-button:hover {
-  background-color: #5758BB;
+  background-color: #5758bb;
   color: white;
 }
 
